bridging/LabSoundHelper.h

/// PORT

intptr_t InitDartApiDL(void* data);
void registerDecodeAudioSendPort(int sendPort);
/// AudioContext

AudioContext* createRealtimeAudioContext(int channels,float sampleRate);
AudioContext* createOfflineAudioContext(int channels,float sampleRate,float timeMills);
void AudioContext_startOfflineRendering(AudioContext* context,int recorderIndex,const char* file_path);
double AudioContext_currentTime(AudioContext* context);
double AudioContext_predictedCurrentTime(AudioContext* context);
float AudioContext_sampleRate(AudioContext* context);
int AudioContext_isInitialized(AudioContext* context);
int AudioContext_isConnected(AudioContext* context, int destinationIndex, int sourceIndex);
void AudioContext_setDeviceNode(AudioContext* context, int nodeId);
int AudioContext_isOfflineContext(AudioContext* context);
uint64_t AudioContext_currentSampleFrame(AudioContext* context);
void AudioContext_connect(AudioContext* context, int destination, int source);
void AudioContext_disconnect(AudioContext* context, int destination, int source);
void AudioContext_resetDevice(AudioContext* context);
void AudioContext_releaseContext(AudioContext* ctx);
/// AudioParam

float AudioParam_value(int nodeId, int paramIndex);
void AudioParam_setValue(int nodeId, int paramIndex, float value);
void AudioParam_setValueCurveAtTime(int nodeId, int paramIndex, float curve[],float time,float duration);
void AudioParam_cancelScheduledValues(int nodeId, int paramIndex, float startTime);
void AudioParam_setValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_exponentialRampToValueAtTime(int nodeId, int paramIndex,float value,float time);