lib/generated_bindings.dart

// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to LabSound
class LabSoundBind {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LabSoundBind(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LabSoundBind.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// PORT
  int InitDartApiDL(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _InitDartApiDL(
      data,
    );
  }

  late final _InitDartApiDL_ptr =
      _lookup<ffi.NativeFunction<_c_InitDartApiDL>>('InitDartApiDL');
  late final _dart_InitDartApiDL _InitDartApiDL =
      _InitDartApiDL_ptr.asFunction<_dart_InitDartApiDL>();

  void registerDecodeAudioSendPort(
    int sendPort,
  ) {
    return _registerDecodeAudioSendPort(
      sendPort,
    );
  }

  late final _registerDecodeAudioSendPort_ptr =
      _lookup<ffi.NativeFunction<_c_registerDecodeAudioSendPort>>(
          'registerDecodeAudioSendPort');
  late final _dart_registerDecodeAudioSendPort _registerDecodeAudioSendPort =
      _registerDecodeAudioSendPort_ptr
          .asFunction<_dart_registerDecodeAudioSendPort>();

  /// AudioContext
  ffi.Pointer<ffi.Int32> createRealtimeAudioContext(
    int channels,
    double sampleRate,
  ) {
    return _createRealtimeAudioContext(
      channels,
      sampleRate,
    );
  }

  late final _createRealtimeAudioContext_ptr =
      _lookup<ffi.NativeFunction<_c_createRealtimeAudioContext>>(
          'createRealtimeAudioContext');
  late final _dart_createRealtimeAudioContext _createRealtimeAudioContext =
      _createRealtimeAudioContext_ptr
          .asFunction<_dart_createRealtimeAudioContext>();

  ffi.Pointer<ffi.Int32> createOfflineAudioContext(
    int channels,
    double sampleRate,
    double timeMills,
  ) {
    return _createOfflineAudioContext(
      channels,
      sampleRate,
      timeMills,
    );
  }

  late final _createOfflineAudioContext_ptr =
      _lookup<ffi.NativeFunction<_c_createOfflineAudioContext>>(
          'createOfflineAudioContext');
  late final _dart_createOfflineAudioContext _createOfflineAudioContext =
      _createOfflineAudioContext_ptr
          .asFunction<_dart_createOfflineAudioContext>();

  void AudioContext_startOfflineRendering(
    ffi.Pointer<ffi.Int32> context,
    int recorderIndex,
    ffi.Pointer<ffi.Int8> file_path,
  ) {
    return _AudioContext_startOfflineRendering(
      context,
      recorderIndex,
      file_path,
    );
  }

  late final _AudioContext_startOfflineRendering_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_startOfflineRendering>>(
          'AudioContext_startOfflineRendering');
  late final _dart_AudioContext_startOfflineRendering
      _AudioContext_startOfflineRendering =
      _AudioContext_startOfflineRendering_ptr.asFunction<
          _dart_AudioContext_startOfflineRendering>();

  double AudioContext_currentTime(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_currentTime(
      context,
    );
  }

  late final _AudioContext_currentTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_currentTime>>(
          'AudioContext_currentTime');
  late final _dart_AudioContext_currentTime _AudioContext_currentTime =
      _AudioContext_currentTime_ptr.asFunction<
          _dart_AudioContext_currentTime>();

  double AudioContext_predictedCurrentTime(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_predictedCurrentTime(
      context,
    );
  }

  late final _AudioContext_predictedCurrentTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_predictedCurrentTime>>(
          'AudioContext_predictedCurrentTime');
  late final _dart_AudioContext_predictedCurrentTime
      _AudioContext_predictedCurrentTime =
      _AudioContext_predictedCurrentTime_ptr.asFunction<
          _dart_AudioContext_predictedCurrentTime>();

  double AudioContext_sampleRate(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_sampleRate(
      context,
    );
  }

  late final _AudioContext_sampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_sampleRate>>(
          'AudioContext_sampleRate');
  late final _dart_AudioContext_sampleRate _AudioContext_sampleRate =
      _AudioContext_sampleRate_ptr.asFunction<_dart_AudioContext_sampleRate>();

  int AudioContext_isInitialized(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_isInitialized(
      context,
    );
  }

  late final _AudioContext_isInitialized_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isInitialized>>(
          'AudioContext_isInitialized');
  late final _dart_AudioContext_isInitialized _AudioContext_isInitialized =
      _AudioContext_isInitialized_ptr.asFunction<
          _dart_AudioContext_isInitialized>();

  int AudioContext_isConnected(
    ffi.Pointer<ffi.Int32> context,
    int destinationIndex,
    int sourceIndex,
  ) {
    return _AudioContext_isConnected(
      context,
      destinationIndex,
      sourceIndex,
    );
  }

  late final _AudioContext_isConnected_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isConnected>>(
          'AudioContext_isConnected');
  late final _dart_AudioContext_isConnected _AudioContext_isConnected =
      _AudioContext_isConnected_ptr.asFunction<
          _dart_AudioContext_isConnected>();

  void AudioContext_setDeviceNode(
    ffi.Pointer<ffi.Int32> context,
    int nodeId,
  ) {
    return _AudioContext_setDeviceNode(
      context,
      nodeId,
    );
  }

  late final _AudioContext_setDeviceNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_setDeviceNode>>(
          'AudioContext_setDeviceNode');
  late final _dart_AudioContext_setDeviceNode _AudioContext_setDeviceNode =
      _AudioContext_setDeviceNode_ptr.asFunction<
          _dart_AudioContext_setDeviceNode>();

  int AudioContext_isOfflineContext(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_isOfflineContext(
      context,
    );
  }

  late final _AudioContext_isOfflineContext_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_isOfflineContext>>(
          'AudioContext_isOfflineContext');
  late final _dart_AudioContext_isOfflineContext
      _AudioContext_isOfflineContext = _AudioContext_isOfflineContext_ptr
          .asFunction<_dart_AudioContext_isOfflineContext>();

  int AudioContext_currentSampleFrame(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_currentSampleFrame(
      context,
    );
  }

  late final _AudioContext_currentSampleFrame_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_currentSampleFrame>>(
          'AudioContext_currentSampleFrame');
  late final _dart_AudioContext_currentSampleFrame
      _AudioContext_currentSampleFrame = _AudioContext_currentSampleFrame_ptr
          .asFunction<_dart_AudioContext_currentSampleFrame>();

  void AudioContext_connect(
    ffi.Pointer<ffi.Int32> context,
    int destination,
    int source,
  ) {
    return _AudioContext_connect(
      context,
      destination,
      source,
    );
  }

  late final _AudioContext_connect_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_connect>>(
          'AudioContext_connect');
  late final _dart_AudioContext_connect _AudioContext_connect =
      _AudioContext_connect_ptr.asFunction<_dart_AudioContext_connect>();

  void AudioContext_disconnect(
    ffi.Pointer<ffi.Int32> context,
    int destination,
    int source,
  ) {
    return _AudioContext_disconnect(
      context,
      destination,
      source,
    );
  }

  late final _AudioContext_disconnect_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_disconnect>>(
          'AudioContext_disconnect');
  late final _dart_AudioContext_disconnect _AudioContext_disconnect =
      _AudioContext_disconnect_ptr.asFunction<_dart_AudioContext_disconnect>();

  void AudioContext_resetDevice(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioContext_resetDevice(
      context,
    );
  }

  late final _AudioContext_resetDevice_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_resetDevice>>(
          'AudioContext_resetDevice');
  late final _dart_AudioContext_resetDevice _AudioContext_resetDevice =
      _AudioContext_resetDevice_ptr.asFunction<
          _dart_AudioContext_resetDevice>();

  void AudioContext_releaseContext(
    ffi.Pointer<ffi.Int32> ctx,
  ) {
    return _AudioContext_releaseContext(
      ctx,
    );
  }

  late final _AudioContext_releaseContext_ptr =
      _lookup<ffi.NativeFunction<_c_AudioContext_releaseContext>>(
          'AudioContext_releaseContext');
  late final _dart_AudioContext_releaseContext _AudioContext_releaseContext =
      _AudioContext_releaseContext_ptr.asFunction<
          _dart_AudioContext_releaseContext>();

  /// AudioParam
  double AudioParam_value(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_value(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_value_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_value>>('AudioParam_value');
  late final _dart_AudioParam_value _AudioParam_value =
      _AudioParam_value_ptr.asFunction<_dart_AudioParam_value>();

  void AudioParam_setValue(
    int nodeId,
    int paramIndex,
    double value,
  ) {
    return _AudioParam_setValue(
      nodeId,
      paramIndex,
      value,
    );
  }

  late final _AudioParam_setValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValue>>(
          'AudioParam_setValue');
  late final _dart_AudioParam_setValue _AudioParam_setValue =
      _AudioParam_setValue_ptr.asFunction<_dart_AudioParam_setValue>();

  void AudioParam_setValueCurveAtTime(
    int nodeId,
    int paramIndex,
    ffi.Pointer<ffi.Float> curve,
    double time,
    double duration,
  ) {
    return _AudioParam_setValueCurveAtTime(
      nodeId,
      paramIndex,
      curve,
      time,
      duration,
    );
  }

  late final _AudioParam_setValueCurveAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValueCurveAtTime>>(
          'AudioParam_setValueCurveAtTime');
  late final _dart_AudioParam_setValueCurveAtTime
      _AudioParam_setValueCurveAtTime = _AudioParam_setValueCurveAtTime_ptr
          .asFunction<_dart_AudioParam_setValueCurveAtTime>();

  void AudioParam_cancelScheduledValues(
    int nodeId,
    int paramIndex,
    double startTime,
  ) {
    return _AudioParam_cancelScheduledValues(
      nodeId,
      paramIndex,
      startTime,
    );
  }

  late final _AudioParam_cancelScheduledValues_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_cancelScheduledValues>>(
          'AudioParam_cancelScheduledValues');
  late final _dart_AudioParam_cancelScheduledValues
      _AudioParam_cancelScheduledValues = _AudioParam_cancelScheduledValues_ptr
          .asFunction<_dart_AudioParam_cancelScheduledValues>();

  void AudioParam_setValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_setValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_setValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setValueAtTime>>(
          'AudioParam_setValueAtTime');
  late final _dart_AudioParam_setValueAtTime _AudioParam_setValueAtTime =
      _AudioParam_setValueAtTime_ptr.asFunction<
          _dart_AudioParam_setValueAtTime>();

  void AudioParam_exponentialRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_exponentialRampToValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }
